# Helyxium

./: .dockerignore  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  INSTALLER_GUIDE.md  LICENSE  LOGO_SETUP.md  Makefile  README.md  SECURITY.md  UPDATES.md  build.py  build_windows.bat  create_installer_bundle.py  docker-compose.yml  main.py  package.bat  package.sh  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  test_core.py  version.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  codeql.yml  release.yml
Helyxium/: CONTRIBUTING.md  Dockerfile  INSTALLER_GUIDE.md  LOGO_SETUP.md  Makefile  README.md  UPDATES.md  build.py  build_windows.bat  create_installer_bundle.py  docker-compose.yml  main.py  package.bat  package.sh  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  test_core.py  version.txt
Helyxium/installer/: install.py  package_installer.py
Helyxium/scripts/: convert_logo.py
Helyxium/src/: __init__.py
Helyxium/src/core/: application.py
Helyxium/src/detection/: __init__.py  hardware.py  platforms.py
Helyxium/src/localization/: detector.py  manager.py
Helyxium/src/localization/translations/: en.json  ja.json  ko.json  zh_CN.json  zh_TW.json
Helyxium/src/security/: __init__.py  auth.py  coppa.py  encryption.py
Helyxium/src/ui/: logo_simple_3d.py  main_window.py
Helyxium/src/utils/: config.py  logging.py
Helyxium/tests/: __init__.py  conftest.py
Helyxium/tests/integration/: __init__.py  test_app_integration.py
Helyxium/tests/unit/: __init__.py  test_config.py  test_hardware_detection.py  test_localization.py
installer/: install.py  package_installer.py
scripts/: convert_logo.py
src/: __init__.py
src/core/: __init__.py  application.py
src/detection/: __init__.py  hardware.py  platforms.py
src/localization/: __init__.py  detector.py  manager.py
src/localization/translations/: en.json  ja.json  ko.json  zh_CN.json  zh_TW.json
src/networking/: __init__.py
src/security/: __init__.py  auth.py  coppa.py  encryption.py
src/translation/: __init__.py
src/ui/: logo_3d.py  logo_simple_3d.py  main_window.py  themes.py
src/ui/widgets/: __init__.py
src/utils/: config.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_app_integration.py
tests/unit/: __init__.py  test_config.py  test_hardware_detection.py  test_localization.py
